# kurosaki-sequence

./: .gitignore  README.md  perform.py  pyproject.toml  requirements.lint.txt  requirements.txt  requirements.web.txt  task.py
game_modules/: cli.py  utils.py
game_modules/blue_archive/: __init__.py  action.py  cli.py
modules/: cli.py  debug_flags.py  shared.py  task.py
modules/types/: __init__.py  fraction.py  timespan.py
modules/types/__compatibilities__/: enum.py
modules/utils/: __init__.py  __meta__.py  args.py  collections.py  log.py  simple.py  version.py
modules/video_ops/: __init__.py  base.py  data.py
modules/video_ops/ffmpeg/: builder.py  stream.py  utils.py
modules/video_scanner/: __init__.py  detect.py  frame_hooks.py  marker.py  state.py  task.py  task_data.py  task_frame_hooks.py  utils.py
