[project]
name = 'video-manipulation-with-opencv'
readme = 'README.md'

[[tool.mypy.overrides]]
module = 'modules.utils'
disable_error_code = 'name-defined'

[tool.ruff]
exclude = [
  '_original_script',
]

line-length = 128
indent-width = 2

[tool.ruff.lint]
#select = [
#  'E4', 'E7', 'E9', 'F',
#  'D',
#]
extend-select = [
  'D',
]
ignore = [
  'E401',
  'F403', 'F405',
  'D10',
  'D200', 'D204', 'D212',
  'D300',
  'D401', 'D415',
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = 'single'

[tool.ruff.lint.isort]
section-order = [
  'future', 'standard-library', 'third-party', 'first-party', 'local-folder',
]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'
