[project]
name = 'video-manipulation-with-opencv'
readme = 'README.md'

[[tool.mypy.overrides]]
module = 'modules.utils'
disable_error_code = 'name-defined'

[tool.ruff]
exclude = [
  'original_script',
  'debug_*.py',
  '_debug/*',
]

line-length = 128
indent-width = 2

[tool.ruff.lint]
extend-select = [
  'D', 'D213',
]
ignore = [
  'E401',
  'F403', 'F405',
  'D10',
    'D100',
    'D104',
  'D200', 'D204', 'D212',
  'D300',
  'D401', 'D415',
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = 'single'

[tool.ruff.lint.isort]
section-order = [
  'future', 'standard-library', 'third-party', 'first-party', 'local-folder',
]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'
